--- a/package.json
+++ b/package.json
@@ -33,11 +33,12 @@
     "compodoc": "compodoc -p src/tsconfig.app.json",
     "docker:prod": "docker-compose -f Production.docker-compose.yml build",
     "docker:prod-up": "docker-compose -f Production.docker-compose.yml up",
-    "docker:prod-down": "docker-compose -f Production.docker-compose.yml down"
+    "docker:prod-down": "docker-compose -f Production.docker-compose.yml down",
+    "doc": "./node_modules/.bin/compodoc -p src/tsconfig.app.json"
   },
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged && npm run lint"
+      "pre-commit": "npm run format:check"
     }
   },
   "lint-staged": {
@@ -48,17 +49,17 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^7.0.3",
-    "@angular/cdk": "^7.0.2",
-    "@angular/common": "^7.0.3",
-    "@angular/compiler": "^7.0.3",
-    "@angular/core": "^7.0.3",
-    "@angular/forms": "^7.0.3",
-    "@angular/http": "^7.0.3",
-    "@angular/material": "^7.0.2",
-    "@angular/platform-browser": "^7.0.3",
-    "@angular/platform-browser-dynamic": "^7.0.3",
-    "@angular/router": "^7.0.3",
+    "@angular/animations": "^7.1.2",
+    "@angular/cdk": "^7.1.1",
+    "@angular/common": "^7.1.2",
+    "@angular/compiler": "^7.0.4",
+    "@angular/core": "^7.1.2",
+    "@angular/forms": "^7.1.2",
+    "@angular/http": "^7.1.2",
+    "@angular/material": "7.1.1",
+    "@angular/platform-browser": "^7.1.2",
+    "@angular/platform-browser-dynamic": "^7.1.2",
+    "@angular/router": "^7.1.1",
     "@fortawesome/angular-fontawesome": "^0.3.0",
     "@fortawesome/fontawesome-free": "^5.5.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.8",
@@ -75,27 +76,33 @@
     "browser-detect": "^0.2.28",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
+    "hls.js": "^0.11.0",
+    "ng5-slider": "^1.1.8",
+    "nouislider": "^12.1.0",
     "rxjs": "^6.3.3",
+    "tslib": "^1.9.0",
     "uuid": "^3.3.2",
+    "videogular2": "videogular2@0.1.0-e966fa8e ",
     "web-animations-js": "^2.2.5",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.10.4",
     "@angular-extensions/testing-library": "^3.0.3",
-    "@angular/cli": "^7.0.4",
-    "@angular/compiler-cli": "^7.0.3",
-    "@angular/language-service": "^7.0.3",
+    "@angular/cli": "^7.1.0",
+    "@angular/compiler-cli": "^7.1.1",
+    "@angular/language-service": "^7.1.1",
     "@bahmutov/add-typescript-to-cypress": "^2.0.0",
-    "@compodoc/compodoc": "^1.1.7",
+    "@compodoc/compodoc": "^1.1.6",
+    "@types/core-js": "^2.5.0",
     "@types/jasmine": "~2.8.9",
     "@types/jasminewd2": "^2.0.5",
     "@types/node": "^10.12.2",
     "all-contributors-cli": "^5.4.1",
     "codelyzer": "~4.5.0",
-    "cypress": "^3.1.3",
+    "cypress": "^3.1.1",
     "express": "^4.16.4",
-    "husky": "^1.1.3",
+    "husky": "^1.2.0",
     "jasmine-core": "~3.2.1",
     "jasmine-marbles": "^0.4.0",
     "jasmine-spec-reporter": "~4.2.1",
@@ -107,7 +114,7 @@
     "karma-spec-reporter": "~0.0.32",
     "lint-staged": "^7.3.0",
     "ngrx-store-freeze": "^0.2.4",
-    "npm-run-all": "^4.1.5",
+    "npm-run-all": "^4.1.3",
     "pa11y-ci": "^2.1.1",
     "prettier": "^1.14.3",
     "protractor": "^5.4.1",
@@ -115,7 +122,7 @@
     "standard-version": "4.2.0",
     "ts-node": "~7.0.1",
     "tslint": "~5.11.0",
-    "typescript": "^3.1.6",
+    "typescript": "~3.1.1",
     "webpack-bundle-analyzer": "^3.0.3"
   }
 }
