--- a/package.json
+++ b/package.json
@@ -38,7 +38,6 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run format:check"
     }
   },
   "lint-staged": {
@@ -54,6 +53,7 @@
     "@angular/common": "^7.1.2",
     "@angular/compiler": "^7.0.4",
     "@angular/core": "^7.1.2",
+    "@angular/flex-layout": "^7.0.0-beta.22",
     "@angular/forms": "^7.1.2",
     "@angular/http": "^7.1.2",
     "@angular/material": "7.1.1",
